--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ repositories {
 
 dependencies {
     testImplementation ('org.junit.jupiter:junit-jupiter:5.10.1',
-            "com.codeborne:selenide:7.0.4")
+            "com.codeborne:selenide:7.0.4",
+            'com.github.javafaker:javafaker:1.0.2')
 
 }
 
